src/src/MVSMLexer.cpp
/* Generated by re2c 0.16 on Tue Feb 21 00:35:17 2017 */
#line 1 "src/src/MVSMLexer.re"
#include "MVSMLexer.h"
#include "exceptions/syntax_exception.h"

int MVSMLexer::Tokenize(const char * YYCURSOR, int len , lexeme_t* lexeme)
{

 	if (lexeme->current >= (YYCURSOR + len)) {
        return 0;
    }
    lexeme->start = lexeme->current;

    const char * YYMARKER;
	#define YYCURSOR lexeme->current

	
#line 19 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if ((YYLIMIT - YYCURSOR) < 6) YYFILL(6);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	case '\n':	goto yy8;
	case '!':	goto yy10;
	case '"':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy12;
	case '#':	goto yy15;
	case '(':	goto yy16;
	case ')':	goto yy18;
	case ',':	goto yy20;
	case '-':	goto yy22;
	case '.':	goto yy23;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	case ':':	goto yy28;
	case ';':	goto yy30;
	case '<':	goto yy32;
	case '=':	goto yy33;
	case 'N':	goto yy35;
	case '^':	goto yy36;
	case 'n':	goto yy38;
	case '{':	goto yy39;
	case '}':	goto yy41;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 20 "src/src/MVSMLexer.re"
	{ return 0; }
#line 115 "<stdout>"
yy4:
	++YYCURSOR;
yy5:
#line 57 "src/src/MVSMLexer.re"
	{
									std::string str(--lexeme->current,0,1);
									throw syntax_exception("Syntax Error - Unexpected "+ str +"\n");
								}
#line 124 "<stdout>"
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy43;
	case 'v':	goto yy46;
	default:	goto yy7;
	}
yy7:
#line 55 "src/src/MVSMLexer.re"
	{ return -1; }
#line 139 "<stdout>"
yy8:
	++YYCURSOR;
#line 56 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_NEWLINE; }
#line 144 "<stdout>"
yy10:
	++YYCURSOR;
#line 45 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_NEGATION;}
#line 149 "<stdout>"
yy12:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy13:
	switch (yych) {
	case '"':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy12;
	default:	goto yy14;
	}
yy14:
#line 24 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_STRING; }
#line 224 "<stdout>"
yy15:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'c':	goto yy47;
	case 's':	goto yy48;
	default:	goto yy5;
	}
yy16:
	++YYCURSOR;
#line 30 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_LBRACKET; }
#line 237 "<stdout>"
yy18:
	++YYCURSOR;
#line 31 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_RBRACKET; }
#line 242 "<stdout>"
yy20:
	++YYCURSOR;
#line 32 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_COMMA; }
#line 247 "<stdout>"
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	default:	goto yy5;
	}
yy23:
	++YYCURSOR;
#line 19 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_DOT; }
#line 267 "<stdout>"
yy25:
	yyaccept = 2;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '.':	goto yy49;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy25;
	default:	goto yy27;
	}
yy27:
#line 22 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_NUMBER; }
#line 290 "<stdout>"
yy28:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '-':	goto yy50;
	default:	goto yy29;
	}
yy29:
#line 53 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_COLON; }
#line 301 "<stdout>"
yy30:
	++YYCURSOR;
#line 51 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_SEMI_COLON;}
#line 306 "<stdout>"
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy52;
	default:	goto yy5;
	}
yy33:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '>':	goto yy54;
	default:	goto yy34;
	}
yy34:
#line 29 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_EQUAL; }
#line 322 "<stdout>"
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy56;
	default:	goto yy13;
	}
yy36:
	++YYCURSOR;
#line 33 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_CONJUNCTION; }
#line 333 "<stdout>"
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy57;
	default:	goto yy13;
	}
yy39:
	++YYCURSOR;
#line 28 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_LPAREN; }
#line 344 "<stdout>"
yy41:
	++YYCURSOR;
#line 27 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_RPAREN; }
#line 349 "<stdout>"
yy43:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy43;
	case 'v':	goto yy46;
	default:	goto yy45;
	}
yy45:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy7;
	case 1: 	goto yy5;
	case 2: 	goto yy27;
	default:	goto yy29;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy58;
	default:	goto yy45;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy61;
	default:	goto yy45;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy62;
	default:	goto yy45;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy63;
	default:	goto yy45;
	}
yy50:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 9) YYFILL(9);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy50;
	case 'c':	goto yy65;
	case 'o':	goto yy66;
	case 's':	goto yy67;
	default:	goto yy45;
	}
yy52:
	++YYCURSOR;
#line 26 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_REVERSE_IMPLICATION; }
#line 424 "<stdout>"
yy54:
	++YYCURSOR;
#line 25 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_IMPLICATION; }
#line 429 "<stdout>"
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy68;
	default:	goto yy13;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy68;
	default:	goto yy13;
	}
yy58:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy58;
	default:	goto yy60;
	}
yy60:
#line 36 "src/src/MVSMLexer.re"
	{
									while(*(lexeme->start) != 'v') lexeme->start++;
									while(*(lexeme->current) != 'v') lexeme->current--;
									lexeme->current++; 
									return MVSM_PARSE_TOKEN_DISJUNCTION;
								}
#line 461 "<stdout>"
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy70;
	default:	goto yy45;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'm':	goto yy71;
	default:	goto yy45;
	}
yy63:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy63;
	default:	goto yy27;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy73;
	default:	goto yy45;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'b':	goto yy74;
	default:	goto yy45;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy75;
	default:	goto yy45;
	}
yy68:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '"':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy12;
	default:	goto yy69;
	}
yy69:
#line 23 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_NEGATION;}
#line 580 "<stdout>"
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy76;
	default:	goto yy45;
	}
yy71:
	++YYCURSOR;
#line 35 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_SUM;}
#line 591 "<stdout>"
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy77;
	default:	goto yy45;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'j':	goto yy78;
	default:	goto yy45;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy79;
	default:	goto yy45;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy80;
	default:	goto yy45;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy82;
	default:	goto yy45;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy83;
	default:	goto yy45;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy84;
	default:	goto yy45;
	}
yy80:
	++YYCURSOR;
#line 34 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_COUNT;}
#line 638 "<stdout>"
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy85;
	default:	goto yy45;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy86;
	default:	goto yy45;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy87;
	default:	goto yy45;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy89;
	default:	goto yy45;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy90;
	default:	goto yy45;
	}
yy87:
	++YYCURSOR;
#line 47 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_SORTS;}
#line 673 "<stdout>"
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy91;
	default:	goto yy45;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy92;
	default:	goto yy45;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy94;
	default:	goto yy45;
	}
yy92:
	++YYCURSOR;
#line 48 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_OBJECTS;}
#line 696 "<stdout>"
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy95;
	default:	goto yy45;
	}
yy95:
	++YYCURSOR;
#line 49 "src/src/MVSMLexer.re"
	{ return MVSM_PARSE_TOKEN_CONSTANTS;}
#line 707 "<stdout>"
}
#line 62 "src/src/MVSMLexer.re"


}